[package]
name = "rustdoc-md"
version = "0.1.1"
edition = "2024"
description = "Convert Rust documentation JSON into clean, organized Markdown files"
readme = "README.md"
repository = "https://github.com/tqwewe/rustdoc-md"
license = "MIT OR Apache-2.0"
keywords = ["rustdoc", "markdown", "documentation", "converter", "api"]
categories = ["development-tools", "text-processing", "command-line-utilities"]
authors = ["Ari Seyhun <dev@tqwewe.com>", "Claude AI (Anthropic)"]

[[bin]]
name = "rustdoc-md"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustdoc-types = "0.56"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zstd = "0.13"
